chore(cosa-deploy): re-vendor CE umbrella 2.33.66 (+ cosa patches) -> 2.33.66-cosa.1
Imported OpenDesk CE appsuite-public-sector 2.33.66 (appVersion 8.51.0) from the
opencode.de CE charts-mirror (digest sha256:5dbd21df6c50f199cc434e966292a23fcaefdc9809ca546567e27e6b0fab1281),
replacing the 2.31.29 vendor. Re-applied our two patches (3-way, clean):
core-mw suppress secret-envvars under existingEnvSecret; docconv/imageconv gate
checksum/commonEnv for deterministic render. Upstream 2.33.66 honours existingEnvSecret only for the envFrom
reference and still renders the chart-managed secret-envvars Secret (plus its
checksum) from values, so both patches remain needed.

Signed-off-by: Christian Glombek <c.glombek@cosa.systems>
Assisted-by: Claude Fable 5